# arthur-translation-layer

./: .gitignore  AppRun  AraPathTranslator.cpp  AraPathTranslator.h  AudioIPC.h  CMakeLists.txt  README.md  SESSION_RECOVERY.md  WaylandPluginWindow.cpp  WaylandPluginWindow.h  arthur-cli.py  arthur-daemon.cpp  arthur.desktop  debug_paths.py  guest.cpp  main.cpp  manual_deploy.py  manual_deploy_v2.py  manual_deploy_v3.py  test.tar
.codersinflow/: index.json
.codersinflow/tasks/task-task-1776764736185-juhc8gc/: display-log.index.json  metadata.json
.github/workflows/: build.yml
backups/golden_state/: CMakeLists.txt.bak  README_GOLDEN.md  VERSION.txt  arthur-cli.py.bak  libarthur_bridge.so.bak  main.cpp.bak  vstiids.cpp.bak
build_artifacts/: check_load
ipc/: control-protocol.cpp  control-protocol.h  shm_buffer.h
scratch/: check_load  check_load.c
